Fixed the issue with search box rendering on Firefox.

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -85,6 +85,7 @@
   color: #9aafba;
   display: inline;
   box-sizing: border-box;
+  -moz-box-sizing: border-box;
   width: 97%;
 }
 
